Add erase function

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
             <div class="row">
                 <div class="col-2">
                     <input type="number" id="pensize" value='4' min='4' max='20'>
-                    <ul class="list-group">
+                    <button class="btn btn-primary" id="erase">Erase</button>
+                    <ul class="list-group mt-2">
                         <li data-color="green" class="list-group-item" style="background-color: green;"></li>
                         <li data-color="red" class="list-group-item" style="background-color: red;"></li>
                         <li data-color="purple" class="list-group-item" style="background-color: purple;"></li>
